--- a/src/Components/Form.css
+++ b/src/Components/Form.css
@@ -2,7 +2,9 @@
   border: none;
   position: absolute;
   top: 70%;
-  left: 50%;
+  left: 60%;
   transform: translate(-50%, -50%);
   padding: 40px;
+  width: 40%;
+  top: 320px;
 }
