--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -11,6 +11,15 @@ a {
   justify-content: left;
   align-items: center;
 }
+
+.footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  height: 60px;
+  background-color: rgba(57, 57, 187, 0.993);
+  
+}
 .item1:hover {
   text-decoration: none;
   color: #48976a;
@@ -19,7 +28,7 @@ a {
   outline: 0;
 }
 .item2 {
-  background: rgba(49, 49, 54, 0.993);
+  background-color: rgba(40, 40, 212, 0.993);
   color: rgb(190, 190, 190);
   margin: 1px;
   font-size: 15px;
@@ -30,7 +39,7 @@ a {
 
 .item3 {
   font-size: 20px;
-  background: #292a30;
+  background-color: rgba(33, 33, 182, 0.993);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,18 +50,18 @@ a {
 }
 .item4 {
   font-size: 20px;
-  background: #25252b;
+  background-color: rgba(56, 56, 211, 0.993);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .item4:hover {
-  background-color: #4267b2;
+  background-color: rgba(175, 175, 206, 0.993);
   transition: 0.4s;
 }
 .item5 {
   font-size: 20px;
-  background: #202025;
+  background-color: rgba(34, 34, 180, 0.993);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,7 +74,7 @@ a {
 .footer-container {
   color: aliceblue;
   text-align: center;
-  background-color: rgba(49, 49, 54, 0.993);
+  background-color: rgba(59, 59, 199, 0.993);
   font-size: 15px;
   width: 100%;
   height: 4rem;
@@ -76,79 +85,79 @@ a {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .item1 {
-      font-size: 12px;
-      padding-left: 3px;
+    font-size: 12px;
+    padding-left: 3px;
   }
   .item2 {
-      font-size: 7px;
+    font-size: 7px;
   }
   .item3,
   .item4,
   .item5 {
-      font-size: 12px;
+    font-size: 12px;
   }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   .item1 {
-      font-size: 14px;
-      padding-left: 5px;
+    font-size: 14px;
+    padding-left: 5px;
   }
   .item2 {
-      font-size: 9px;
+    font-size: 9px;
   }
   .item3,
   .item4,
   .item5 {
-      font-size: 14px;
+    font-size: 14px;
   }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   .item1 {
-      font-size: 16px;
-      padding-left: 6px;
+    font-size: 16px;
+    padding-left: 6px;
   }
   .item2 {
-      font-size: 11px;
+    font-size: 11px;
   }
   .item3,
   .item4,
   .item5 {
-      font-size: 16px;
+    font-size: 16px;
   }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   .item1 {
-      font-size: 18px;
-      padding-left: 8px;
+    font-size: 18px;
+    padding-left: 8px;
   }
   .item2 {
-      font-size: 13px;
+    font-size: 13px;
   }
   .item3,
   .item4,
   .item5 {
-      font-size: 18px;
+    font-size: 18px;
   }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .item1 {
-      font-size: 20px;
-      padding-left: 10px;
+    font-size: 20px;
+    padding-left: 10px;
   }
   .item2 {
-      font-size: 15px;
+    font-size: 15px;
   }
   .item3,
   .item4,
   .item5 {
-      font-size: 20px;
+    font-size: 20px;
   }
 }
